add_subdirectory(gx)

if (NOT EMSCRIPTEN)
	option(SHADERTOY_BUILD_GL4_BACKEND "Build the OpenGL 4 raw backend" ON)
	if (SHADERTOY_BUILD_GL4_BACKEND)
		add_subdirectory(gl4)
	endif()
else ()
	option(SHADERTOY_BUILD_WEBGL_BACKEND "Build the WebGL (emscripten) backend" ON)
	if (SHADERTOY_BUILD_WEBGL_BACKEND)
		add_subdirectory(webgl)
	endif()
endif()
